Fixed a bunch of stuff

--- a/public/highscore.html
+++ b/public/highscore.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Score</title>
-    <link rel="stylesheet" href="BJ style.css">
-    <link rel="stylesheet" href="BJ highscore.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="highscore.css">
 </head>
 <body>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore" class="home-title">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="BJ index.html" class="btn">Go Home</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="BJ highscore.js"></script>
-    <script src="BJ end.js"></script>
+    <script src="highscore.js"></script>
+    <script src="end.js"></script>
 </body>
 </html>
