--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="BJ style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1 class="home-title">BOJ<span style="font-size: 8rem;">A</span><span style="color: #ffd166" class="h1, home-title">C</span>K Quiz</h1>
             <h2>Fans of Bojack Horseman and Bojack Horseman fans. What do you know? Do you know things? Lets find out!</h2>
-            <a href="BJ game.html" class="btn">Play</a>
-            <a href="BJ highscore.html" id="highscore-btn" class="btn">High Scores Here</a>
+            <a href="game.html" class="btn">Play</a>
+            <a href="highscore.html" id="highscore-btn" class="btn">High Scores Here</a>
         </div>
     </div>
 </body>
