--- a/public/end.html
+++ b/public/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>End</title>
-    <link rel="stylesheet" href="BJ style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -15,11 +15,11 @@
                 <h2 id="end-text">Enter your name below to save your score!</h2>
                 <input type="text" name="name" id="username" placeholder="Enter your name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
-                <a href="BJ game.html" class="btn">Play Again</a>
-                <a href="BJ index.html" class="btn">Go Home</a>
+                <a href="game.html" class="btn">Play Again</a>
+                <a href="index.html" class="btn">Go Home</a>
             </form>
         </div>
     </div>
-    <script src="BJ end.js"></script>
+    <script src="end.js"></script>
 </body>
 </html>
